src/components/Card/Card.css
.card__container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 320px;
  height: 509px;
}

.card__info-container {
  position: relative;
  flex-grow: 1;
  background-color: white;
  background-image: url('../../images/Photo-min.png');
  background-repeat: no-repeat;
  background-position: top 200px left -30px;
  border: 4px solid #1698d9;
  border-radius: 12px;
  clip-path: polygon(
    /*top left 1*/ 42px 0%,
            /*top left 2*/ 100% 0,
            /*top right 1*/ 100% 100%,
            /*bottom right 2*/ 100% 100%,
            /*bottom right 2*/ 0 100%,
            /*bottom left*/ 0% 42px
  );
  transition: ease-in border-bottom-color .15s,
              ease-in border-right-color .15s,
              ease-in border-top-color .15s,
              ease-in border-left-color .15s;
}

.card__info-container:hover {
  cursor: pointer;
  border-color: #2ea8e6;
}

.card__info-container:hover:after {
  cursor: pointer;
  border-color: #2ea8e6;
}

.card__info-container:hover .weight-icon {
  background-color: #2ea8e6;
}

.card__info-container:after {
  border-top: 5px solid #1698d9;
  position: absolute;
  content: '';
  top: 7px;
  left: 9px;
  width: 58px;
  height: 58px;
  rotate: -45deg;
  background-color: transparent;
  transition: ease-in border-top-color .15s;
}

/* ACTIVE STATE */
.card__info-container_active {
  border-color: #d91667;
  transition: ease-in border-bottom-color .15s, ease-in border-right-color .15s, ease-in border-top-color .15s, ease-in border-left-color .15s;
}

.card__info-container_active:after {
  border-top-color: #d91667;
}

.card__info-container_active:hover {
  
  border-color: #e62e7a;
}

.card__info-container_active:hover:after {
  border-top-color: #e52e7a;
}

.card__info-container:hover .weight-icon_active {
  background-color: #e52e7a;
}

/* selected card hover */
.card-info__slogan_active:after {
  opacity: 0;
  animation: text-animation-in .2s forwards;
}

@keyframes text-animation-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.card__info-container:hover .card-info__slogan_active:after {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: white;
  content: 'Котэ не одобряет?';
  color: #e62e7a;
}

.card__info-container_no-hover {
  border-color: #d91667 !important;
}

.card__info-container_no-hover.card__info-container_active:after {
  border-top-color: #d91667 !important;
}

.card__info-container_no-hover .weight-icon_active {
  background-color: #d91667 !important;
}

/* DISABLED */
.card__info-container_disabled {
  color: #b3b3b3 !important;
  border-color: #b3b3b3;
  pointer-events: none;
}

.card__info-container_disabled:before {
  border-radius: 8px;
  position: absolute;
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #f2f2f2;
  z-index: 1;
  opacity: .5;
}

.card__info-container_disabled .weight-icon {
  background-color: #b3b3b3;
  z-index: 2;
}

.card__info-container_disabled:after {
  position: absolute;
  content: '';
  z-index: 10;
  border-top: 5px solid #b3b3b3;
}

.card-info__container {
  margin: 17px 46px;
}

.card-info__container_overlay {
  border: 1px solid red;
  background-color: #2ea8e6;
  opacity: .2;
  z-index: 100;
}

.card__description {
  display: flex;
  align-items: end;
  justify-content: center;
  min-height: 29px;
  color: white;
  font-family: 'Trebuchet MS', sans-serif;
  line-height: 110%;
  font-weight: 400;
  font-size: 13px;
  letter-spacing: 0.03px;
}

.card__description_out-of-stock {
  color: #ffff66;
}

.card__description_accent {
  margin: 0;
  padding: 0;
  background-color: transparent;
  border: none;
  border-bottom: 1px dashed;
  line-height: 100%;
  color: #1698d9;
}

.card__description_accent:hover {
  cursor: pointer;
  color: #22a7e9;
}

.card-info__title {
  margin: 7px 0 0;
  font-size: 48px;
  font-weight: 700;
}

.card-info__subtitle {
  font-size: 24px;
  line-height: 100%;
  margin: 0 0 20px 0;
  font-weight: bold;
}

.card-info__slogan {
  font-family: 'Trebuchet MS', sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: #666666;
  position: relative;
}

.card-info__options {
  max-width: 130px;
  font-family: 'Trebuchet MS', sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 110%;
  color: #666666;
}

.card-info__options_accent {
  font-size: 14px;
  font-weight: bold;
}

.weight-icon {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 80px;
  height: 80px;
  border-radius: 40px;
  background-color: #1698d9;
  position: absolute;
  bottom: 12px;
  right: 12px;
  color: white;
  transition: ease-in background-color .15s;
}

.weight-icon_active {
  transition: ease-in background-color .15s;
  background-color: #d91667;
}

.weight-icon_active:hover {
  background-color: #e52e7a;
}

.weight-icon__quantity {
  margin-top: 7px;
  font-family: 'Trebuchet MS', sans-serif;
  font-size: 42px;
  font-weight: 400;
  line-height: 85%;
}

.weight-icon__unit {
  font-family: 'Trebuchet MS', sans-serif;
  font-size: 21px;
  font-weight: 400;
  line-height: 100%;
}

@media screen and (max-width: 340px) {
  .card__container {
    width: 300px;
    height: 470px;
  }
  
  .card__info-container:after {
    top: 5px;
    left: 15px;
    width: 55px;
    height: 70px;
  }
}

